--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "expo-camera": "~13.4.4",
+    "expo-face-detector": "~12.2.0",
+    "react-native-reanimated": "~3.3.0",
+    "expo-speech": "~11.3.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
